# terminal_alpha_beta

./: .gitignore  .gitlab-ci.yml  COMMANDS.md  Cargo.toml  Cross.toml  README.md  actiondata.json  build.rs  chatdata.json  commands.txt  makefile  notes.txt  responses.json  sample_gfycat.json
actionengine/: nlu_engine.json
actionengine/custom_entity_parser/parser/: metadata.json
actionengine/custom_entity_parser/parser/parser_1/: parser
actionengine/custom_entity_parser/parser/parser_2/: parser
actionengine/custom_entity_parser/parser/parser_3/: parser
actionengine/custom_entity_parser/parser/parser_5/: parser
actionengine/lookup_intent_parser/: intent_parser.json
actionengine/probabilistic_intent_parser/: intent_parser.json
actionengine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
actionengine/probabilistic_intent_parser/slot_filler_0/: model.crfsuite  slot_filler.json
actionengine/probabilistic_intent_parser/slot_filler_1/: model.crfsuite  slot_filler.json
actionengine/probabilistic_intent_parser/slot_filler_2/: model.crfsuite  slot_filler.json
actionengine/probabilistic_intent_parser/slot_filler_3/: model.crfsuite  slot_filler.json
actionengine/probabilistic_intent_parser/slot_filler_4/: model.crfsuite
actionengine/probabilistic_intent_parser/slot_filler_5/: model.crfsuite
actionengine/probabilistic_intent_parser/slot_filler_6/: model.crfsuite  slot_filler.json
chatengine/: nlu_engine.json
chatengine/lookup_intent_parser/: intent_parser.json
chatengine/probabilistic_intent_parser/: intent_parser.json
chatengine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
credentials/: Readme.md
data/: responses.db  responses.json
data/rootengine/: nlu_engine.json
data/rootengine/custom_entity_parser/parser/: metadata.json
data/rootengine/lookup_intent_parser/: intent_parser.json
data/rootengine/probabilistic_intent_parser/: intent_parser.json
data/rootengine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
data/rootengine/probabilistic_intent_parser/slot_filler_0/: slot_filler.json
data/rootengine/probabilistic_intent_parser/slot_filler_1/: model.crfsuite  slot_filler.json
go-src/: creds.json  go.mod  go.sum  main.go  makefile
go-src/database/: database.go
golibs/: libpeople.h
json_samples/: intent_sample.json
nlu/actionengine/lookup_intent_parser/: intent_parser.json
nlu/rootengine/: nlu_engine.json
nlu/rootengine/lookup_intent_parser/: intent_parser.json
nlu/rootengine/probabilistic_intent_parser/: intent_parser.json
src/: api.rs  clients.rs  database.rs  handlers.rs  main.rs  root.rs  util.rs
src/api/: mod.rs
src/clients/: discord.rs  mod.rs  shared_utils.rs  telegram.rs
src/database/: gluedb.rs  mod.rs  mongo.rs
src/functions/: general.rs  golib.rs  mod.rs  util.rs
src/handlers/: actions.rs  animation.rs  chat.rs  corona.rs  extras.rs  identify.rs  info.rs  intent.rs  meme.rs  mod.rs  notes.rs  responses.rs  root.rs  search.rs  state.rs  util.rs
src/handlers/actions/: animation.rs  chat.rs  corona.rs  extra.rs  extras.rs  identify.rs  info.rs  initiate.rs  mod.rs  notes.rs  reminder.rs  search.rs
src/handlers/responses/: mod.rs
src/handlers/state/: expiry.rs  mod.rs  userevent.rs  userstate.rs
src/repositories/: covid_repository.rs  gfycat_repository.rs  info_repository.rs  mod.rs  notes_repository.rs  people_repository.rs  search_repository.rs
src/services/: covid_service.rs  gfycat_service.rs  info_service.rs  mod.rs  notes_service.rs  people_service.rs  search_service.rs  util_service.rs
src/util/: logger.rs
src/utils/: general.rs  mod.rs
trainingdata/: actiondata.json  actiondata.yaml  chatdata.json  chatdata.yaml  rootdata.json  sample.yaml
(+52 files in other folders)
