[package]
name = "terminal_alpha_beta"
version = "0.4.0"
authors = ["zireael9797 <ryanhossain9797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'


[dependencies]
futures = "0.3"
async-std = {version = "1.6", features = ["attributes", "unstable", "tokio02"]}
telegram-bot = {git = "https://github.com/telegram-rs/telegram-bot"}
serenity = { git = "https://github.com/Lakelezz/serenity", branch = "await", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"]}
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
futures-intrusive = "0.3"
async-trait = "0.1"
dotenv = "0.15"
once_cell = "1.4"
colored = "2.0"
regex = "1"
rand = "0.7"
reqwest = "0.10"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1"
closestmatch = "0.1"
mongodb = "1.0"
serde = "1.0"
serde_json = "1.0"
search_with_google = "0.4"