[package]
name = "terminal_alpha_beta"
version = "0.4.0"
authors = ["zireael9797 <ryanhossain9797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'


[dependencies]
futures = "0.3"
async-std = { version = "1.6", features = ["tokio02", "attributes", "unstable"]}
# tokio = {git = "https://github.com/tokio-rs/tokio", features = ["full"]}
# tokio = {version = "0.2", features = ["full"]}
telegram-bot = {git = "https://github.com/telegram-rs/telegram-bot"}
serenity = { version = "0.9.0-rc.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"]}
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
anyhow = "1.0"
futures-intrusive = "0.3"
async-trait = "0.1"
dotenv = "0.15"
once_cell = "1.4"
colored = "2.0"
regex = "1.3"
flume = "0.9"
rand = "0.7"
reqwest = {version = "0.10", features = ["rustls-tls"]}
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1"
closestmatch = "0.1"
gluesql = { version = "0.1", features = ["sled-storage"] }
mongodb = {version = "1.1", default-features = false, features = ["async-std-runtime"]}
serde = "1.0"
serde_json = "1.0"
serde-query = "0.1"
cached = "0.19"
search_with_google = "0.5"