[package]
name = "terminal_alpha_beta"
version = "0.4.0"
authors = ["zireael9797 <ryanhossain9797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'


[dependencies]
futures = "0.3"

async-std = { version = "1.7", features = ["tokio02", "tokio03", "attributes", "unstable"]}
telegram-bot = {git = "https://github.com/telegram-rs/telegram-bot"}
serenity = { version = "0.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"]}
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
once_cell = "1.4"
dashmap = "4.0.0-rc6"
colored = "2.0"
regex = "1.4"
flume = "0.9"
rand = "0.7"
reqwest = {version = "0.10", features = ["rustls-tls"]}
openssl = { version = "0.10", features = ["vendored"] }
closestmatch = "0.1"
mongodb = {version = "1.1", default-features = false, features = ["async-std-runtime"]}
serde = "1.0"
serde_json = "1.0"
search_with_google = "0.5"
serde-query = "0.1"
gluesql = "0.2"
# openssl-probe = "0.1"